--- a/style.css
+++ b/style.css
@@ -20,11 +20,17 @@
 
 body {
     background-color: var(--bg-color);
-    max-height: 100vh;
-    margin: 7.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;    
+}
+
+main {
+    max-width: 1150px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, min-content);
     gap: 1em;
 }
 
@@ -32,10 +38,34 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    gap: 1em;
+    padding: 1.5em 2.5em;
     border-radius: 10px;
-    padding: 2em;
-    z-index: 1;
     color: white;
+
+    /* aligns the quotation marks */
+    z-index: 1;
+}
+
+.card-1::after {
+    content: url(images/bg-pattern-quotation.svg);
+    position: absolute;
+    top: 0;
+    right: 15%;
+
+    z-index: 2;
+}
+
+section h1,
+section h2,
+section h3,
+section p {
+    /* aligns the quotation marks */
+    z-index: 3;
+}
+
+.card-4 {
+    color: #222;
 }
 
 section h2,
@@ -48,10 +78,7 @@ section p {
 section h1 {
     font-weight: 600;
     font-size: 1.375rem;
-
-    z-index: 3;
 }
-
 
 section h3 {
     opacity: 0.5;
@@ -59,10 +86,7 @@ section h3 {
 
 section p {
     opacity: 0.7;
-}
-
-.card-4 {
-    color: black;
+    line-height: 1.5em;
 }
 
 .profile {
@@ -86,12 +110,9 @@ section p {
     position: relative;
 }
 
-.card-1::after {
-    content: url(images/bg-pattern-quotation.svg);
-    position: absolute;
-    top: 0;
-    right: 15%;
-    z-index: 2;
+.card-1 img {
+    border: 2px solid #A775F1;
+    /* color is the samew as quotation marks */
 }
 
 .card-2 {
@@ -103,11 +124,47 @@ section p {
     grid-column: span 2;
 }
 
+.card-3 img {
+    border: 2px solid var(--card1-color)
+}
+
 .card-4 {
     background-color: var(--card4-color);
 }
 
-.span-2-row {
+.card-4:last-of-type {
     grid-column: 4 / 5;
     grid-row: 1 / 3;
+}
+
+@media (max-width: 1150px) {
+
+    main {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, min-content);
+        width: 95%;
+    }
+
+    .card-4:last-of-type {
+        grid-column: 1 / 4;
+        grid-row: 3 / 4;
+    }
+}
+
+@media (max-width: 790px) {
+    
+    main {
+        margin: 1em 0;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(auto-fill, 1fr);
+    }
+
+    .card-1,
+    .card-2,
+    .card-3,
+    .card-4 {
+        grid-column: unset !important;
+        grid-row: unset !important;
+    }
+
 }
